#add mono font for rendering

--- a/src/core/styles/base.less
+++ b/src/core/styles/base.less
@@ -1,7 +1,7 @@
 
 body {
     margin: 0;
-    font-family: 'Helvetica Neue', 'Helvetica', 'Lucida Grande', 'Arial', sans-serif;
+    font-family: 'deja-vu-sans-mono', 'Helvetica Neue', 'Helvetica', 'Lucida Grande', 'Arial', sans-serif;
     font-size: 15px;
     color: @--color-black20;
     background: @--color-white10;
