--- a/src/styles.less
+++ b/src/styles.less
@@ -4,13 +4,14 @@
 
 
 /* Module includes */
-@import './modules/colors';
-@import './modules/queries';
+@import 'modules/colors';
+@import 'modules/queries';
+@import 'modules/fonts';
 
 
 /* Global includes */
-@import './base';
-@import './utils';
+@import 'base';
+@import 'utils';
 
 
 /* Component includes */
