#add basic scaffold stuff

--- a/src/styles.less
+++ b/src/styles.less
@@ -7,6 +7,7 @@
 @import 'modules/colors';
 @import 'modules/queries';
 @import 'modules/fonts';
+@import 'modules/zIndex';
 
 
 /* Global includes */
@@ -15,3 +16,4 @@
 
 
 /* Component includes */
+@import 'components/map/map';
