--- a/src/core/styles/base.less
+++ b/src/core/styles/base.less
@@ -8,3 +8,13 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: greyscale;
 }
+
+.debug {
+    position: fixed;
+    font-size: 32px * 1.2;
+    line-height: 32px * 1.2;
+    color: white;
+    padding: 10px;
+    background: rgba( 0, 0, 0, 0.8 );
+    z-index: @--z-Debug;
+}
